# units

./: .clang-format  .gitignore  .old_strong_typedef.old  CMakeLists.txt  README.md  base_dimensions.hpp  base_dimensions_test.cpp  common_quantities.hpp  common_quantities_test.cpp  common_units.hpp  coverage_test.py  datetime.hpp  datetime_test.cpp  derived_dimensions.hpp  derived_dimensions_impl.hpp  derived_dimensions_printing.hpp  derived_dimensions_test.cpp  install.sh  install_test_clang_gcc.sh  new 1.txt  numeric_functions.hpp  numeric_functions_test.cpp  prefixes.hpp  prefixes_test.cpp  quantity.hpp  quantity_test.cpp  si_prefixes.hpp  si_prefixes_test.cpp  string_constants.hpp  strong_typedef.hpp  strong_typedef_test.cpp  tagging_logic_test.cpp
